# ntetest

./: .gitignore
fadia-rs/: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
fadia-rs/assets/Blueprints/Character/Player/: Player_003_Sagiri.json  Player_004_Lacrimosa.json  Player_009_Female.json  Player_019_Mint.json  Player_039_Fadia.json  Player_051_Female.json  Player_052_Jin.json  Player_056_bat.json  player_008_Skia.json  player_010_nanally.json  player_023_Cang.json  player_025_hathor.json  player_033_adler.json  player_046_male.json
fadia-rs/assets/Blueprints/Weapon/Player/: Weapon_Female051_Player.json  Weapon_Player_Adler.json  Weapon_Player_Adler_Show1.json  Weapon_Player_Adler_Show2.json  Weapon_Player_Cang.json  Weapon_Player_Fadia.json  Weapon_Player_Female.json  Weapon_Player_Hathor.json  Weapon_Player_Hathor_Containment.json  Weapon_Player_Jin.json  Weapon_Player_Jin_Branch2.json  Weapon_Player_Jin_Containment.json  Weapon_Player_Jin_Disk.json  Weapon_Player_Jin_Show1.json  Weapon_Player_Jin_Show2.json  Weapon_Player_Lacrimosa.json  Weapon_Player_Mint.json  Weapon_Player_Mint_Containment.json  Weapon_Player_Mint_Show2.json  Weapon_Player_Nanally.json  Weapon_Player_Nanally_Containment.json  Weapon_Player_Sagiri.json  Weapon_Player_Sagiri_Show.json  (+5 more)
fadia-rs/assets/DataTable/Avatar/: AvatarDataTable.json
fadia-rs/assets/patchersdk/: serverlist_hhtest.json
fadia-rs/lib/codegen/: Cargo.toml
fadia-rs/lib/codegen/src/: hotta_replicated_object.rs  lib.rs  newtype_util.rs  rep_layout.rs  rpc_handlers.rs
fadia-rs/lib/common/src/: lib.rs  log_util.rs  time_util.rs
fadia-rs/lib/config/: Cargo.toml
fadia-rs/lib/config/src/: lib.rs  util.rs
fadia-rs/lib/engine/: Cargo.toml
fadia-rs/lib/engine/src/: lib.rs  net_guid.rs  package_map.rs  rotator.rs  vector.rs
fadia-rs/servers/game-server/: Cargo.toml  game_server.default.toml
fadia-rs/servers/game-server/src/: assets.rs  config.rs  main.rs
fadia-rs/servers/gamesdk-server/: Cargo.toml  build.rs  gamesdk_server.default.toml
fadia-rs/servers/gamesdk-server/fbs/: data.fbs
fadia-rs/servers/gamesdk-server/gen_flatbuffers/: data_generated.rs
fadia-rs/servers/gamesdk-server/src/: config.rs  main.rs  packet.rs  packet_processing.rs
fadia-rs/servers/patchersdk-server/: Cargo.toml  patchersdk_server.default.toml
fadia-rs/servers/patchersdk-server/src/: config.rs  main.rs
(+1521 files in other folders)
