[workspace]
members = ["lib/*", "servers/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
# Runtime
tokio = { version = "1.46.1", features = ["full"] }

# Http
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3.19"

# Error processing
thiserror = "2.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9.2"
flatbuffers = "25.2.10"
flatc-rust = "0.2.0"

# Cryptography
hmac = "0.12.1"
sha1 = "0.10.6"

# Util
hex = "0.4.3"
rand = "0.9.1"
paste = "1.0.15"
byteorder = "1.5.0"
bitstream-io = "2.6.0"
num_enum = "0.7.4"

# Codegen
syn = "2.0.104"
quote = "1.0.40"
proc-macro2 = "1.0.95"

# Internal
common = { path = "lib/common" }
fadia-config = { path = "lib/config" }
fadia-engine = { path = "lib/engine" }
fadia-codegen = { path = "lib/codegen" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Link-time optimization.
opt-level = 3     # Optimize for speed.
codegen-units = 1 # Maximum size reduction optimizations.
