[package]
name = "fadia-game-server"
edition = "2024"
version.workspace = true

[dependencies]
tokio.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# I/O
byteorder.workspace = true
bitstream-io.workspace = true

# Cryptography
hmac.workspace = true
sha1.workspace = true

# Serialization
serde.workspace = true

# Util
hex.workspace = true
rand.workspace = true
num_enum.workspace = true
thiserror.workspace = true
paste.workspace = true

# Internal
common.workspace = true
fadia-config.workspace = true
fadia-engine.workspace = true
fadia-codegen.workspace = true
